; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_dhm.c_mbedtls_dhm_parse_dhmfile.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_dhm.c_mbedtls_dhm_parse_dhmfile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mbedtls_dhm_parse_dhmfile(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @load_file(i8* %9, i8** %8, i64* %7)
  store i32 %10, i32* %6, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %2
  %13 = load i32, i32* %6, align 4
  store i32 %13, i32* %3, align 4
  br label %25

14:                                               ; preds = %2
  %15 = load i32*, i32** %4, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = load i64, i64* %7, align 8
  %18 = call i32 @mbedtls_dhm_parse_dhm(i32* %15, i8* %16, i64 %17)
  store i32 %18, i32* %6, align 4
  %19 = load i8*, i8** %8, align 8
  %20 = load i64, i64* %7, align 8
  %21 = call i32 @mbedtls_zeroize(i8* %19, i64 %20)
  %22 = load i8*, i8** %8, align 8
  %23 = call i32 @mbedtls_free(i8* %22)
  %24 = load i32, i32* %6, align 4
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %14, %12
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i32 @load_file(i8*, i8**, i64*) #1

declare dso_local i32 @mbedtls_dhm_parse_dhm(i32*, i8*, i64) #1

declare dso_local i32 @mbedtls_zeroize(i8*, i64) #1

declare dso_local i32 @mbedtls_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
